--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "email": "SUBTODUSTY28@GMAIL.COM",
+    "email": "comi061q@gmail.com",
     "password": "",
     "cid": "CID_005_Athena_Commando_M_DEFAULT",
     "bid": "BID_004_BlackKnight",
@@ -8,10 +8,10 @@
     "banner_color": "defaultcolor22",
     "level": "999",
     "bp_tier": 999,
-    "status": "Battle Royale Lobby - 2184 / 16",
-    "platform": "PSN",
+    "status": "عندك شيء تعال سوني ffirz",
+    "platform": "WIN",
     "friendaccept": "True",
-    "joinoninvite": "True",
+    "joinoninvite": "false",
     "AdminPassword": "0001",
     "FullAccess": [
     "",
